; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bochs/extr_bochs_hw.c_bochs_dispi_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bochs/extr_bochs_hw.c_bochs_dispi_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bochs_device = type { i64 }

@VBE_DISPI_IOPORT_INDEX = common dso_local global i32 0, align 4
@VBE_DISPI_IOPORT_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bochs_device*, i32, i32)* @bochs_dispi_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bochs_dispi_write(%struct.bochs_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bochs_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.bochs_device* %0, %struct.bochs_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.bochs_device*, %struct.bochs_device** %4, align 8
  %9 = getelementptr inbounds %struct.bochs_device, %struct.bochs_device* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %3
  %13 = load i32, i32* %5, align 4
  %14 = shl i32 %13, 1
  %15 = add nsw i32 1280, %14
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.bochs_device*, %struct.bochs_device** %4, align 8
  %18 = getelementptr inbounds %struct.bochs_device, %struct.bochs_device* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i32, i32* %7, align 4
  %21 = sext i32 %20 to i64
  %22 = add nsw i64 %19, %21
  %23 = call i32 @writew(i32 %16, i64 %22)
  br label %31

24:                                               ; preds = %3
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @VBE_DISPI_IOPORT_INDEX, align 4
  %27 = call i32 @outw(i32 %25, i32 %26)
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* @VBE_DISPI_IOPORT_DATA, align 4
  %30 = call i32 @outw(i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %24, %12
  ret void
}

declare dso_local i32 @writew(i32, i64) #1

declare dso_local i32 @outw(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
